--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,10 +1,9 @@
----
+--- 
+phases: 
+  build: 
+    commands: 
+      - "echo \"Building pyftp ami\""
+      - "echo \"Packer build completed on `date`\""
+      - "echo \"Tagging AMIs\""
+      - "echo \"Tag Complete\""
 version: 0.2
-
-phases     
-  build:
-    commands:
-      - echo "Building pyftp ami"
-      - echo "Packer build completed on `date`"
-      - echo "Tagging AMIs"  
-      - echo "Tag Complete"
