--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,8 +2,5 @@
 phases: 
   build: 
     commands: 
-      - "echo \"Building pyftp ami\""
-      - "echo \"Packer build completed on `date`\""
-      - "echo \"Tagging AMIs\""
-      - "echo \"Tag Complete\""
+      - "echo \"Testing the Build process\""
 version: 0.2
